@@ -1,6 +1,13 @@
 2007-12-31  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/nm-connection-editor.glade
+	  src/connection-editor/nm-connection-editor.c
+	  src/connection-editor/nm-connection-editor.h
+		- Hook wireless security widgets up 	
+
+2007-12-31  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/nm-connection-editor.glade
 		- Add wireless security page widget
 
 	* src/connection-editor/Makefile.am
